syntax = "proto3";

package com.reqreply.user;

option java_multiple_files = true;

import "com/example/ajax/user.proto";

message GetAllUsersRequest {

}

message GetAllUsersResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated example.ajax.User user = 1;
  }

  message Failure {
    string message = 100;
  }
}
